--- a/luce_vm/jupyter/VikasContractTest.ipynb
+++ b/luce_vm/jupyter/VikasContractTest.ipynb
@@ -2275,16 +2275,13 @@
  ],
  "metadata": {
   "hide_input": false,
-  "interpreter": {
-   "hash": "e4964bfa376d31da6d333375ad84387ded2c0fb3d557db632352b50239f60fd5"
-  },
   "kernel_info": {
    "name": "python3"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Django Shell-Plus",
    "language": "python",
-   "name": "python3"
+   "name": "django_extensions"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2296,7 +2293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.7"
   },
   "nteract": {
    "version": "0.14.3"
