--- a/jupyter/ConsentHierarchicalData.ipynb
+++ b/jupyter/ConsentHierarchicalData.ipynb
@@ -19,12 +19,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": null,
       "metadata": {
         "inputHidden": false,
         "outputHidden": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'web3'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[1;32md:\\WorkSpace\\Maastricht\\LUCE\\DecentralizedHealthcareBackend\\luce_vm\\jupyter\\ConsentHierarchicalData.ipynb Cell 3\u001b[0m line \u001b[0;36m3\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/WorkSpace/Maastricht/LUCE/DecentralizedHealthcareBackend/luce_vm/jupyter/ConsentHierarchicalData.ipynb#X21sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Import libraries\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/WorkSpace/Maastricht/LUCE/DecentralizedHealthcareBackend/luce_vm/jupyter/ConsentHierarchicalData.ipynb#X21sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mjson\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/WorkSpace/Maastricht/LUCE/DecentralizedHealthcareBackend/luce_vm/jupyter/ConsentHierarchicalData.ipynb#X21sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mweb3\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/WorkSpace/Maastricht/LUCE/DecentralizedHealthcareBackend/luce_vm/jupyter/ConsentHierarchicalData.ipynb#X21sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mdatetime\u001b[39;00m \u001b[39mimport\u001b[39;00m datetime\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/WorkSpace/Maastricht/LUCE/DecentralizedHealthcareBackend/luce_vm/jupyter/ConsentHierarchicalData.ipynb#X21sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mweb3\u001b[39;00m \u001b[39mimport\u001b[39;00m Web3\n",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'web3'"
+          ]
+        }
+      ],
       "source": [
         "# Import libraries\n",
         "import json\n",
@@ -40,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -205,7 +217,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -280,7 +292,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -308,7 +320,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -355,7 +367,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -475,7 +487,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -583,7 +595,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 102,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -928,7 +940,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.16"
+      "version": "3.10.11"
     },
     "nteract": {
       "version": "0.14.3"
