--- a/jupyter/ConsentHierarchicalData.ipynb
+++ b/jupyter/ConsentHierarchicalData.ipynb
@@ -19,24 +19,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "inputHidden": false,
         "outputHidden": false
       },
-      "outputs": [
-        {
-          "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'web3'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[1;32md:\\WorkSpace\\Maastricht\\LUCE\\DecentralizedHealthcareBackend\\luce_vm\\jupyter\\ConsentHierarchicalData.ipynb Cell 3\u001b[0m line \u001b[0;36m3\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/WorkSpace/Maastricht/LUCE/DecentralizedHealthcareBackend/luce_vm/jupyter/ConsentHierarchicalData.ipynb#X21sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Import libraries\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/WorkSpace/Maastricht/LUCE/DecentralizedHealthcareBackend/luce_vm/jupyter/ConsentHierarchicalData.ipynb#X21sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mjson\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/WorkSpace/Maastricht/LUCE/DecentralizedHealthcareBackend/luce_vm/jupyter/ConsentHierarchicalData.ipynb#X21sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mweb3\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/WorkSpace/Maastricht/LUCE/DecentralizedHealthcareBackend/luce_vm/jupyter/ConsentHierarchicalData.ipynb#X21sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mdatetime\u001b[39;00m \u001b[39mimport\u001b[39;00m datetime\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/WorkSpace/Maastricht/LUCE/DecentralizedHealthcareBackend/luce_vm/jupyter/ConsentHierarchicalData.ipynb#X21sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mweb3\u001b[39;00m \u001b[39mimport\u001b[39;00m Web3\n",
-            "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'web3'"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Import libraries\n",
         "import json\n",
@@ -47,22 +35,29 @@
         "import solcx \n",
         "from web3.contract import Contract\n",
         "import os\n",
-        "import icd10"
+        "# import icd10"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
+            "d:\\WorkSpace\\Maastricht\\LUCE\\DecentralizedHealthcareBackend\\jupyter\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
             "dict_keys(['<stdin>:ConsentCode'])\n",
             "dict_keys(['abi', 'bin', 'bin-runtime'])\n",
-            "The contract is deployed with block number 2365 .\n",
-            "The contract has the address 0x1D3856d5cfd4c9b0CdF03017A5444E6d1C6b0Db8\n"
+            "The contract is deployed with block number 2464 .\n",
+            "The contract has the address 0x641a1614d8B2ccddde130eb2EC47069655A6Cc3D\n"
           ]
         },
         {
@@ -73,7 +68,7 @@
               " '0x68C0eC5c56f0EDe43affA748e5D4aFd87f31513d']"
             ]
           },
-          "execution_count": 87,
+          "execution_count": 15,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -81,11 +76,11 @@
       "source": [
         "# Read in LUCE contract code\n",
         "# solcx.install_solc('0.8.0')\n",
-        "\n",
-        "consent_fp = 'data/ConsentContractDate.sol'\n",
+        "print(os.getcwd())\n",
+        "consent_fp = 'D:\\WorkSpace\\Maastricht\\LUCE\\DecentralizedHealthcareBackend\\jupyter\\data\\ConsentHierarchyData.sol'\n",
         "with open(consent_fp) as file:\n",
         "    contract_source_code = file.read()\n",
-        "# print(os.getcwd())\n",
+        "\n",
         "# Compile & Store Compiled source code\n",
         "# print(contract_source_code)\n",
         "solcx_version = '0.8.17'\n",
@@ -217,7 +212,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [
         {
@@ -234,8 +229,6 @@
         }
       ],
       "source": [
-        "import fixedint as fx\n",
-        "\n",
         "import re\n",
         "\n",
         "pattern = r\"^[A-Z\\*][0-9\\*]{2}\\.[0-9\\*]$\"\n",
@@ -292,15 +285,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "0x1D3856d5cfd4c9b0CdF03017A5444E6d1C6b0Db8\n",
-            "<web3.contract.contract.ContractFunctions object at 0x7f11291022b0>\n",
+            "0x641a1614d8B2ccddde130eb2EC47069655A6Cc3D\n",
+            "<web3.contract.contract.ContractFunctions object at 0x0000024058FFFEB0>\n",
             "2 is success\n",
             "0\n"
           ]
@@ -320,14 +313,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "[]\n",
+            "[]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
             "[]\n",
             "[]\n",
             "0\n"
@@ -367,7 +366,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [
         {
@@ -487,28 +486,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "['AUT', 'BEL', 'BGR', 'CYP', 'CZE', 'DEU', 'DNK', 'ESP', 'EST', 'FIN', 'FRA', 'GRC', 'HRV', 'HUN', 'IRL', 'ITA', 'LTU', 'LUX', 'LVA', 'MLT', 'NLD', 'POL', 'PRT', 'ROU', 'SVK', 'SVN', 'SWE']\n",
-            "ANNEX_ONE\n",
-            "EUU\n",
-            "ANNEX_ONE_KAZ\n",
-            "EUU\n",
-            "AR5\n",
-            "ANHH\n",
-            "G20\n",
-            "EUU\n",
-            "G7\n",
-            "EUU\n",
-            "UNFCCC\n",
-            "EUU\n",
-            "MONTREAL_PROTOCOL_COUNTRIES\n",
-            "EUU\n"
+            "['AUT', 'BEL', 'BGR', 'CYP', 'CZE', 'DEU', 'DNK', 'ESP', 'EST', 'FIN', 'FRA', 'GRC', 'HRV', 'HUN', 'IRL', 'ITA', 'LTU', 'LUX', 'LVA', 'MLT', 'NLD', 'POL', 'PRT', 'ROU', 'SVK', 'SVN', 'SWE']\n"
+          ]
+        },
+        {
+          "ename": "NameError",
+          "evalue": "name 'country_code_rows' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[1;32md:\\WorkSpace\\Maastricht\\LUCE\\DecentralizedHealthcareBackend\\jupyter\\ConsentHierarchicalData.ipynb Cell 11\u001b[0m line \u001b[0;36m1\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/WorkSpace/Maastricht/LUCE/DecentralizedHealthcareBackend/jupyter/ConsentHierarchicalData.ipynb#X13sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39m# country_code_rows = list(csv.DictReader(open(country_fp, 'r')))\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/WorkSpace/Maastricht/LUCE/DecentralizedHealthcareBackend/jupyter/ConsentHierarchicalData.ipynb#X13sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39m# ['official_name_en']\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/WorkSpace/Maastricht/LUCE/DecentralizedHealthcareBackend/jupyter/ConsentHierarchicalData.ipynb#X13sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39mprint\u001b[39m(cg\u001b[39m.\u001b[39mEUROPEAN_UNION)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/WorkSpace/Maastricht/LUCE/DecentralizedHealthcareBackend/jupyter/ConsentHierarchicalData.ipynb#X13sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m country_code_dict \u001b[39m=\u001b[39m {row[\u001b[39m'\u001b[39m\u001b[39mISO3166-1-Alpha-3\u001b[39m\u001b[39m'\u001b[39m]: row \u001b[39mfor\u001b[39;00m row \u001b[39min\u001b[39;00m country_code_rows}\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/WorkSpace/Maastricht/LUCE/DecentralizedHealthcareBackend/jupyter/ConsentHierarchicalData.ipynb#X13sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m country_index_dict \u001b[39m=\u001b[39m {row[\u001b[39m'\u001b[39m\u001b[39mISO3166-1-Alpha-3\u001b[39m\u001b[39m'\u001b[39m]: i \u001b[39mfor\u001b[39;00m i, row \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(country_code_rows)}\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/WorkSpace/Maastricht/LUCE/DecentralizedHealthcareBackend/jupyter/ConsentHierarchicalData.ipynb#X13sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m group_name \u001b[39m=\u001b[39m[\u001b[39m'\u001b[39m\u001b[39mANNEX_ONE\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mANNEX_ONE_KAZ\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mAOSIS\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mAR5\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mARAB_GROUP\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mBRICS\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mEIG\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mEUROPEAN_UNION\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mG20\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mG7\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mG77\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mGRADUATED_LDCS\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mIMO\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mLDC\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mLLDC\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mMONTREAL_PROTOCOL_HIGH_AMBIENT_TEMP\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mNON_ANNEX_ONE\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mOECD\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mOPEC\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mSIDS\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mSIDS_NON_UN_OR_REGIONAL_COMMISSIONS_ASSOCIATES\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mSSP\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mUMBRELLA\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mUN_REGIONAL_GROUPS\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mUNFCCC\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mUNSTATS_GEOGRAPHICAL_REGIONS\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mMONTREAL_PROTOCOL_COUNTRIES\u001b[39m\u001b[39m'\u001b[39m]\n",
+            "\u001b[1;31mNameError\u001b[0m: name 'country_code_rows' is not defined"
           ]
         }
       ],
@@ -599,15 +595,12 @@
       "metadata": {},
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "openNoProfit False\n",
-            "requester_code is 260385715, provider_code is 260385715 \n",
-            "0\n",
-            "0\n",
-            "0\n",
-            "0\n"
+          "ename": "",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31mThe kernel failed to start due to an outdated version of IPyKernel. Consider updating this module to the latest version.\n",
+            "\u001b[1;31mClick <a href='https://aka.ms/kernelFailuresOldIPyKernel'>here</a> for more info."
           ]
         }
       ],
@@ -682,7 +675,17 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31mThe kernel failed to start due to an outdated version of IPyKernel. Consider updating this module to the latest version.\n",
+            "\u001b[1;31mClick <a href='https://aka.ms/kernelFailuresOldIPyKernel'>here</a> for more info."
+          ]
+        }
+      ],
       "source": [
         "startTime14 = datetime.now()\n",
         "#Data Requesters Account\n",
