--- a/jupyter/UnifiedConsentModel.ipynb
+++ b/jupyter/UnifiedConsentModel.ipynb
@@ -19,7 +19,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 14,
       "metadata": {
         "inputHidden": false,
         "outputHidden": false
@@ -44,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
@@ -54,8 +54,8 @@
             "d:\\WorkSpace\\Maastricht\\LUCE\\DecentralizedHealthcareBackend\\jupyter\n",
             "dict_keys(['<stdin>:ConsentCode'])\n",
             "dict_keys(['abi', 'bin', 'bin-runtime'])\n",
-            "The contract is deployed with block number 2615 .\n",
-            "The contract has the address 0xfA461C5189f62CCFaB362F24906a59D15B626e2B\n"
+            "The contract is deployed with block number 2648 .\n",
+            "The contract has the address 0x3b528DE78C85Bf490DECCD8546dCa4cB2db2Bc1B\n"
           ]
         },
         {
@@ -66,7 +66,7 @@
               " '0x68C0eC5c56f0EDe43affA748e5D4aFd87f31513d']"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 15,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -213,7 +213,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
@@ -286,19 +286,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "0xfA461C5189f62CCFaB362F24906a59D15B626e2B\n",
-            "<web3.contract.contract.ContractFunctions object at 0x00000131D34926E0>\n",
+            "0x3b528DE78C85Bf490DECCD8546dCa4cB2db2Bc1B\n",
+            "<web3.contract.contract.ContractFunctions object at 0x00000163D9CBA590>\n",
             "1057\n",
             "2 is success\n",
-            "Estimated gas cost for UploadProviderBooleanItems: 28665\n",
-            "Estimated gas cost for AccessData: 28665\n",
+            "Estimated gas cost for UploadProviderBooleanItems: 28688\n",
+            "Estimated gas cost for AccessData: 38275\n",
             "0\n"
           ]
         }
@@ -309,6 +309,60 @@
         "\n",
         "\n",
         "# print(contract.checkAccess(requester_1_dict))\n",
+        "\n",
+        "\n",
+        "class Person:\n",
+        "    address = 0\n",
+        "    name = \"\"\n",
+        "    description = \"\"\n",
+        "\n",
+        "    boolItems = BooleanItems()\n",
+        "\n",
+        "    DiseaseItems = []\n",
+        "    Country_Code = []\n",
+        "    Group_Code = 0\n",
+        "    Country_Group_Code = 0\n",
+        "    Start_Year = 0\n",
+        "    Start_Month = 0\n",
+        "    Start_Day = 0\n",
+        "    Months = 0\n",
+        "\n",
+        "    Contract = None\n",
+        "    person_dict = None\n",
+        "    role=0\n",
+        "\n",
+        "\n",
+        "class Provider(Person):\n",
+        "    def __init__(self):\n",
+        "        self.role = 0\n",
+        "    \n",
+        "    def uploadSimpleItems(self):\n",
+        "        self.Contract.functions.UploadSimpleItems(self.role,\n",
+        "            self.address, self.boolItems.to_int()\n",
+        "        ).transact(self.person_dict)\n",
+        "\n",
+        "    def UploadDiseaseItems(self):\n",
+        "        self.Contract.functions.UploadDiseaseItemsProvider(\n",
+        "            self.address, self.DiseaseItems\n",
+        "        ).transact(self.person_dict)\n",
+        "\n",
+        "    def UploadCountryItems(self):\n",
+        "        self.Contract.functions.UploadCountryItemsProvider(\n",
+        "            self.address, self.CountryItems\n",
+        "        ).transact(self.person_dict)\n",
+        "\n",
+        "    def UploadDate(self):\n",
+        "        self.Contract.functions.UploadDateProvider(\n",
+        "            self.address, self.Start_Year, self.Start_Month, self.Start_Day, self.Months\n",
+        "        ).transact(self.person_dict)\n",
+        "\n",
+        "    def __str__(self):\n",
+        "        return f\"Provider: {self.name}, {self.address}, {self.description}\"\n",
+        "    \n",
+        "    def display(self):\n",
+        "        print(self.__str__())\n",
+        "\n",
+        "\n",
         "class BooleanItems:\n",
         "    ClinicalProfessionals = False\n",
         "    AcademicProfessionals = False\n",
@@ -349,13 +403,23 @@
         "        return result\n",
         "\n",
         "\n",
+        "provider1 = Provider()\n",
+        "provider1.address = provider_address\n",
+        "provider1.name = \"Provider1\"\n",
+        "provider1.description = \"Provider1\"\n",
+        "provider1.Contract = contract\n",
+        "provider1.person_dict = provider_dict\n",
+        "\n",
+        "provider1.boolItems.ClinicalProfessionals = True\n",
+        "provider1.uploadSimpleItems()\n",
+        "\n",
         "bItems = BooleanItems()\n",
         "bItems.ClinicalProfessionals = True\n",
         "bItems.AncestryResearch = True\n",
         "bItems.ProfitPurpose = True\n",
         "\n",
         "print(bItems.to_int())\n",
-        "result = contract.functions.UploadProviderBooleanItems(\n",
+        "result = contract.functions.UploadSimpleItemsProvider(\n",
         "    provider_address, bItems.to_int()\n",
         ").transact(provider_dict)\n",
         "\n",
@@ -367,7 +431,7 @@
         "# print(result)\n",
         "# print(contract.functions._functions)\n",
         "\n",
-        "UploadProviderBooleanItems = contract.functions.UploadProviderBooleanItems(\n",
+        "UploadProviderBooleanItems = contract.functions.UploadSimpleItemsProvider(\n",
         "    provider_address, bItems.to_int()\n",
         ")\n",
         "gas_estimate = UploadProviderBooleanItems.estimate_gas(\n",
@@ -378,7 +442,7 @@
         ")\n",
         "print(f\"Estimated gas cost for UploadProviderBooleanItems: {gas_estimate}\")\n",
         "AccessData = contract.functions.AccessData(provider_address, request_1_address)\n",
-        "gas_estimate = my_function.estimate_gas(\n",
+        "gas_estimate = AccessData.estimate_gas(\n",
         "    {\n",
         "        \"from\": provider_address,\n",
         "        # \"gas\": 200000,  # You can set an initial gas limit here\n",
