--- a/jupyter/ConsentHierarchicalData.ipynb
+++ b/jupyter/ConsentHierarchicalData.ipynb
@@ -519,7 +519,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
@@ -528,40 +528,61 @@
           "text": [
             "['AUT', 'BEL', 'BGR', 'CYP', 'CZE', 'DEU', 'DNK', 'ESP', 'EST', 'FIN', 'FRA', 'GRC', 'HRV', 'HUN', 'IRL', 'ITA', 'LTU', 'LUX', 'LVA', 'MLT', 'NLD', 'POL', 'PRT', 'ROU', 'SVK', 'SVN', 'SWE']\n"
           ]
-        },
-        {
-          "ename": "NameError",
-          "evalue": "name 'country_code_rows' is not defined",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[1;32md:\\WorkSpace\\Maastricht\\LUCE\\DecentralizedHealthcareBackend\\jupyter\\ConsentHierarchicalData.ipynb Cell 11\u001b[0m line \u001b[0;36m1\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/WorkSpace/Maastricht/LUCE/DecentralizedHealthcareBackend/jupyter/ConsentHierarchicalData.ipynb#X13sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39m# country_code_rows = list(csv.DictReader(open(country_fp, 'r')))\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/WorkSpace/Maastricht/LUCE/DecentralizedHealthcareBackend/jupyter/ConsentHierarchicalData.ipynb#X13sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39m# ['official_name_en']\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/WorkSpace/Maastricht/LUCE/DecentralizedHealthcareBackend/jupyter/ConsentHierarchicalData.ipynb#X13sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39mprint\u001b[39m(cg\u001b[39m.\u001b[39mEUROPEAN_UNION)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/WorkSpace/Maastricht/LUCE/DecentralizedHealthcareBackend/jupyter/ConsentHierarchicalData.ipynb#X13sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m country_code_dict \u001b[39m=\u001b[39m {row[\u001b[39m'\u001b[39m\u001b[39mISO3166-1-Alpha-3\u001b[39m\u001b[39m'\u001b[39m]: row \u001b[39mfor\u001b[39;00m row \u001b[39min\u001b[39;00m country_code_rows}\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/WorkSpace/Maastricht/LUCE/DecentralizedHealthcareBackend/jupyter/ConsentHierarchicalData.ipynb#X13sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m country_index_dict \u001b[39m=\u001b[39m {row[\u001b[39m'\u001b[39m\u001b[39mISO3166-1-Alpha-3\u001b[39m\u001b[39m'\u001b[39m]: i \u001b[39mfor\u001b[39;00m i, row \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(country_code_rows)}\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/WorkSpace/Maastricht/LUCE/DecentralizedHealthcareBackend/jupyter/ConsentHierarchicalData.ipynb#X13sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m group_name \u001b[39m=\u001b[39m[\u001b[39m'\u001b[39m\u001b[39mANNEX_ONE\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mANNEX_ONE_KAZ\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mAOSIS\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mAR5\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mARAB_GROUP\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mBRICS\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mEIG\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mEUROPEAN_UNION\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mG20\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mG7\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mG77\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mGRADUATED_LDCS\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mIMO\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mLDC\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mLLDC\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mMONTREAL_PROTOCOL_HIGH_AMBIENT_TEMP\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mNON_ANNEX_ONE\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mOECD\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mOPEC\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mSIDS\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mSIDS_NON_UN_OR_REGIONAL_COMMISSIONS_ASSOCIATES\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mSSP\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mUMBRELLA\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mUN_REGIONAL_GROUPS\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mUNFCCC\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mUNSTATS_GEOGRAPHICAL_REGIONS\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mMONTREAL_PROTOCOL_COUNTRIES\u001b[39m\u001b[39m'\u001b[39m]\n",
-            "\u001b[1;31mNameError\u001b[0m: name 'country_code_rows' is not defined"
-          ]
         }
       ],
       "source": [
         "import countrygroups as cg\n",
         "import pycountry as pc\n",
-        "import os \n",
+        "import os\n",
         "import csv\n",
         "import json\n",
         "\n",
-        "country_fp = 'data/country-codes.csv'\n",
-        "country_line_fp = 'data/country-codes.jsonl'\n",
-        "country_code_rows = list(csv.DictReader(open(country_fp, 'r')))\n",
+        "country_fp = \"data/countries.csv\"\n",
+        "country_line_fp = \"data/country-codes.jsonl\"\n",
+        "country_code_rows = list(csv.DictReader(open(country_fp, \"r\")))\n",
         "# ['official_name_en']\n",
         "\n",
         "print(cg.EUROPEAN_UNION)\n",
-        "country_code_dict = {row['ISO3166-1-Alpha-3']: row for row in country_code_rows}\n",
-        "country_index_dict = {row['ISO3166-1-Alpha-3']: i for i, row in enumerate(country_code_rows)}\n",
-        "group_name =['ANNEX_ONE', 'ANNEX_ONE_KAZ', 'AOSIS', 'AR5', 'ARAB_GROUP', 'BRICS', 'EIG', 'EUROPEAN_UNION', 'G20', 'G7', 'G77', 'GRADUATED_LDCS', 'IMO', 'LDC', 'LLDC', 'MONTREAL_PROTOCOL_HIGH_AMBIENT_TEMP', 'NON_ANNEX_ONE', 'OECD', 'OPEC', 'SIDS', 'SIDS_NON_UN_OR_REGIONAL_COMMISSIONS_ASSOCIATES', 'SSP', 'UMBRELLA', 'UN_REGIONAL_GROUPS', 'UNFCCC', 'UNSTATS_GEOGRAPHICAL_REGIONS', 'MONTREAL_PROTOCOL_COUNTRIES']\n",
-        "gn_key = 'groups'\n",
+        "country_code_dict = {row[\"ISO3166-1-Alpha-3\"]: row for row in country_code_rows}\n",
+        "country_index_dict = {\n",
+        "    row[\"ISO3166-1-Alpha-3\"]: i for i, row in enumerate(country_code_rows)\n",
+        "}\n",
+        "group_name = [\n",
+        "    \"ANNEX_ONE\",\n",
+        "    \"ANNEX_ONE_KAZ\",\n",
+        "    \"AOSIS\",\n",
+        "    \"AR5\",\n",
+        "    \"ARAB_GROUP\",\n",
+        "    \"BRICS\",\n",
+        "    \"EIG\",\n",
+        "    \"EUROPEAN_UNION\",\n",
+        "    \"G20\",\n",
+        "    \"G7\",\n",
+        "    \"G77\",\n",
+        "    \"GRADUATED_LDCS\",\n",
+        "    \"IMO\",\n",
+        "    \"LDC\",\n",
+        "    \"LLDC\",\n",
+        "    \"MONTREAL_PROTOCOL_HIGH_AMBIENT_TEMP\",\n",
+        "    \"NON_ANNEX_ONE\",\n",
+        "    \"OECD\",\n",
+        "    \"OPEC\",\n",
+        "    \"SIDS\",\n",
+        "    \"SIDS_NON_UN_OR_REGIONAL_COMMISSIONS_ASSOCIATES\",\n",
+        "    \"SSP\",\n",
+        "    \"UMBRELLA\",\n",
+        "    \"UN_REGIONAL_GROUPS\",\n",
+        "    \"UNFCCC\",\n",
+        "    \"UNSTATS_GEOGRAPHICAL_REGIONS\",\n",
+        "    \"MONTREAL_PROTOCOL_COUNTRIES\",\n",
+        "]\n",
+        "allowed_groups = {\"EUROPEAN_UNION\", \"OPEC\", \"OECD\"}\n",
+        "group_name = [gn for gn in group_name if hasattr(cg, gn) and gn in allowed_groups]\n",
+        "gn_key = \"groups\"\n",
         "group_index_dict = {gn: 2**i for i, gn in enumerate(group_name)}\n",
         "\n",
         "for gn in group_name:\n",
-        "    countries_gn =  cg.__dict__.get(gn)\n",
+        "    countries_gn = cg.__dict__.get(gn)\n",
         "    for country in countries_gn:\n",
         "        gn_dict = country_code_dict.get(country)\n",
         "        if gn_dict is None:\n",
@@ -571,20 +592,21 @@
         "        if gn_key not in gn_dict:\n",
         "            gn_dict[gn_key] = list()\n",
         "        gn_dict[gn_key].append(gn)\n",
-        "  \n",
-        "with open(country_line_fp, 'w') as f:\n",
-        "    text = ''\n",
+        "\n",
+        "with open(country_line_fp, \"w\") as f:\n",
+        "    text = \"\"\n",
         "    for row in country_code_rows:\n",
-        "        text += json.dumps(row) + '\\n'\n",
+        "        text += json.dumps(row) + \"\\n\"\n",
         "    f.write(text)\n",
         "# print(country_code_rows[1])\n",
         "# print(cg.__dict__.\n",
-        "    #   keys())\n",
+        "#   keys())\n",
         "# print(os.getcwd())\n",
         "\n",
         "# print(pc.countries)\n",
         "\n",
-        "def index_for_requester(country_names:str = None, group_names:str = None):\n",
+        "\n",
+        "def index_for_requester(country_names: str = None, group_names: str = None):\n",
         "    group_index = 0\n",
         "    country_index = 0\n",
         "    if group_names is not None:\n",
@@ -596,9 +618,10 @@
         "            group_name_cn = country_code_dict[cn].get(gn_key)\n",
         "            for gn in group_name_cn:\n",
         "                group_index += group_index_dict[gn]\n",
-        "    return group_index,country_index\n",
+        "    return group_index, country_index\n",
         "\n",
-        "def index_for_provider(country_names:str = None, group_names:str = None):\n",
+        "\n",
+        "def index_for_provider(country_names: str = None, group_names: str = None):\n",
         "    group_index = 0\n",
         "    country_index = 0\n",
         "    if group_names is not None:\n",
@@ -607,7 +630,8 @@
         "    if country_names is not None:\n",
         "        for cn in country_names:\n",
         "            country_index += country_index_dict[cn]\n",
-        "    return  group_index,country_index\n",
+        "    return group_index, country_index\n",
+        "\n",
         "\n",
         "# print(index_for_requester(group_names=['EUROPEAN_UNION']))\n",
         "# print(index_for_requester(country_names=['CHN']))\n",
